Fix issue in menus to being visible in mobile.

--- a/client/src/app/home/home.component.sass
+++ b/client/src/app/home/home.component.sass
@@ -18,8 +18,8 @@
 
 .navbar_fixed_div
   position: fixed;
-  width: 60%;
-  margin-left: 20%;
+  width: 80%;
+  margin-left: 10%;
   text-align: center;
 
 .navbar_fixed_div a
